tests/baselines/reference/parserSkippedTokens3.errors.txt
==== tests/cases/compiler/parserSkippedTokens3.ts (4 errors) ====
    \ ; \
    ~
!!! parserSkippedTokens3.ts(1,1): error TS1001: Unexpected character "\".
    ~
!!! parserSkippedTokens3.ts(1,1): error TS1008: Unexpected token; 'module, class, interface, enum, import or statement' expected.
        ~
!!! parserSkippedTokens3.ts(1,5): error TS1001: Unexpected character "\".
        ~
!!! parserSkippedTokens3.ts(1,5): error TS1008: Unexpected token; 'module, class, interface, enum, import or statement' expected.